text in the windows

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -35,16 +35,17 @@ button{
 
 }
 
-input {
+.text-calc{
    width: 250px;
    height: 40px;
-    outline: none;    
+    
     border: none;
     background: transparent;
     overflow: hidden;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     direction: rtl;
     font-size: 45px;
+    margin: auto
 }
 .div-input{
     width: 250px;
